@@ -268,10 +268,12 @@ A literal percent sign.
 File's path.
 .IP %f
 File's name.
+.IP %d
+File's directory.
 .IP "%u or %U"
 Prefix used to print a filename, file path or base64/raw message digest as an
-URL\(hyencoded string. For example: `%uf', `%up', `%uBm', `%u@h'.
-Use %u for lowercase and %U for uppercase characters.
+URL\(hyencoded string. For example: `%up', `%ud', `%uf', `%uBm', `%u@h'.
+Use %u for lowercase and %U for uppercase hexadecimal characters.
 .IP %s
 File's size in bytes.
 .IP %{mtime}
