@@ -171,8 +171,8 @@ TEST_EXPECTED="(stdin) 352441C2 900150983CD24FB0D6963F7D28E17F72 A9993E364706816
 check "$TEST_RESULT" "$TEST_EXPECTED"
 
 new_test "test with 1Kb data file:    "
-TEST_RESULT=$( $rhash --printf "%f %C %M %H %E %G %T %A %W\n" test1K.data 2>/dev/null )
-TEST_EXPECTED="test1K.data B70B4C26 B2EA9F7FCEA831A4A63B213F41A8855B 5B00669C480D5CFFBDFA8BDBA99561160F2D1B77 5AE257C47E9BE1243EE32AABE408FB6B 7A6682133082A49C37DB7B008394AEB9C184D5FB2A8D2A6251DD4BBA5F6744B4 4OQY25UN2XHIDQPV5U6BXAZ47INUCYGIBK7LFNI LMAGNHCIBVOP7PP2RPN2TFLBCYHS2G3X D606B7F44BD288759F8869D880D9D4A2F159D739005E72D00F93B814E8C04E657F40C838E4D6F9030A8C9E0308A4E3B450246250243B2F09E09FA5A24761E26B"
+TEST_RESULT=$( $rhash --printf "%f %d %C %M %H %E %G %T %A %W\n" test1K.data 2>/dev/null )
+TEST_EXPECTED="test1K.data . B70B4C26 B2EA9F7FCEA831A4A63B213F41A8855B 5B00669C480D5CFFBDFA8BDBA99561160F2D1B77 5AE257C47E9BE1243EE32AABE408FB6B 7A6682133082A49C37DB7B008394AEB9C184D5FB2A8D2A6251DD4BBA5F6744B4 4OQY25UN2XHIDQPV5U6BXAZ47INUCYGIBK7LFNI LMAGNHCIBVOP7PP2RPN2TFLBCYHS2G3X D606B7F44BD288759F8869D880D9D4A2F159D739005E72D00F93B814E8C04E657F40C838E4D6F9030A8C9E0308A4E3B450246250243B2F09E09FA5A24761E26B"
 check "$TEST_RESULT" "$TEST_EXPECTED" .
 # test calculation/verification of reversed GOST hashes with 1Kb data file
 TEST_RESULT=$( $rhash --simple --gost --gost-cryptopro --gost-reverse test1K.data )
@@ -221,9 +221,12 @@ TEST_EXPECTED="(message) 1 E8B7BE43 5c334qy BTAXLOOA6G3KQMODTHRGS5ZGME hvfkN/qlp
 check "$TEST_RESULT" "$TEST_EXPECTED"
 
 new_test "test %u modifier:           "
-mkdir dir1 && printf "a" > "dir1/=@+.txt"
-TEST_RESULT=$( $rhash -p '%uf %Uf %up %Up %uxc %uxC %ubc %ubC\n' "dir1/=@+.txt" )
-TEST_EXPECTED="%3d%40%2b.txt %3D%40%2B.txt dir1%2f%3d%40%2b.txt dir1%2F%3D%40%2B.txt e8b7be43 E8B7BE43 5c334qy 5C334QY"
+mkdir -p "dir1/d@" && printf "a" > "dir1/d@/=@+.txt"
+TEST_RESULT=$( $rhash -p '%uf %Uf %ud %Ud %Up %uxc\n' "dir1/d@/=@+.txt" )
+TEST_EXPECTED="%3d%40%2b.txt %3D%40%2B.txt dir1%2fd%40 dir1%2Fd%40 dir1%2Fd%40%2F%3D%40%2B.txt e8b7be43"
+check "$TEST_RESULT" "$TEST_EXPECTED" .
+TEST_RESULT=$( $rhash -p '%up %uxc %uxC %ubc %ubC\n' "dir1/d@/=@+.txt" )
+TEST_EXPECTED="dir1%2fd%40%2f%3d%40%2b.txt e8b7be43 E8B7BE43 5c334qy 5C334QY"
 check "$TEST_RESULT" "$TEST_EXPECTED" .
 TEST_RESULT=$( $rhash -p '%uBc %UBc %Bc %u@c %U@c\n' -m "a" )
 TEST_EXPECTED="6Le%2bQw%3d%3d 6Le%2BQw%3D%3D 6Le+Qw== %e8%b7%beC %E8%B7%BEC"
